Fix nav having correct z-index always

--- a/static/css/input.css
+++ b/static/css/input.css
@@ -2,11 +2,11 @@
 
 @layer components {
     .nav {
-        @apply absolute translate-x-full sm:translate-x-0 sm:static left-0 w-full pt-20 sm:pt-0 sm:w-fit flex flex-col bg-amber-100/70 backdrop-blur-sm sm:bg-transparent sm:backdrop-blur-none sm:flex-row items-center h-full gap-8 sm:gap-6 lg:gap-8 ease-in-out duration-200;
+        @apply z-20 absolute translate-x-full sm:translate-x-0 sm:static left-0 w-full pt-30 sm:pt-0 sm:w-fit flex flex-col bg-amber-100/70 backdrop-blur-sm sm:bg-transparent sm:backdrop-blur-none sm:flex-row items-center h-full gap-8 sm:gap-6 lg:gap-8 ease-in-out duration-200;
     }
 
     .nav.open {
-        @apply z-20 translate-x-0;
+        @apply translate-x-0;
     }
 
     .hamburger {
